NLP TP/texts/robotics/robotics.stackexchange_0000038530.txt
Q:

Failed to install log4cxx! (homebrew osx 10.6.8)

Trying to run the command:
rosinstall ~/ros "http://packages.ros.org/cgi-bin/gen_rosinstall.py?rosdistro=electric&variant=desktop-full&overlay=no"
But I am getting the error:
"Failed to install log4cxx!
[ rosmake ] rosdep install failed: Rosdep install failed"
Traceback (most recent call last):
File "/usr/local/bin/rosinstall", line 5, in 
pkg_resources.run_script('rosinstall==0.5.29', 'rosinstall')
File "/Library/Python/2.6/site-packages/setuptools-0.6c11-py2.6.egg/pkg_resources.py", line 489, in run_script
File "/Library/Python/2.6/site-packages/setuptools-0.6c11-py2.6.egg/pkg_resources.py", line 1214, in run_script
self.egg_info = os.path.join(path, 'EGG-INFO')
File "/Library/Python/2.6/site-packages/rosinstall-0.5.29-py2.6.egg/EGG-INFO/scripts/rosinstall", line 764, in 
File "/Library/Python/2.6/site-packages/rosinstall-0.5.29-py2.6.egg/EGG-INFO/scripts/rosinstall", line 754, in rosinstall_main
File "/System/Library/Frameworks/Python.framework/Versions/2.6/lib/python2.6/subprocess.py", line 462, in check_call

Originally posted by heyfred on ROS Answers with karma: 122 on 2012-03-07
Post score: 0

Original comments
Comment by heyfred on 2012-03-08:
Tried installing it manually get the errors:
make[2]: *** [install-recursive] Error 1
make[1]: *** [install-recursive] Error 1
make: *** [install-recursive] Error 1
==> Exit Status: 2
http://github.com/mxcl/homebrew/blob/master/Library/Formula/log4cxx.rb#L24
.
Error: Failed executing: make install
Comment by mjcarroll on 2012-03-08:
There may be something bigger wrong with log4cxx, as it seems to fail on macports as well: http://answers.ros.org/question/11114/port-install-of-log4cxx-failes-on-mac-osx-106
Comment by heyfred on 2012-03-09:
After trying the removing the subversion folder im still getting the error:
#<BuildError: Failed executing: make install >
Homebrew will abort. The installation prefix is:
/usr/local/Cellar/log4cxx/0.10.0
Comment by Adrian Dittrich on 2013-09-07:
/github.com/ros/com?mon_tutorials.gitMar 9'12
Comment by Adrian Dittrich on 2013-09-07:
heyfred ( Mar 9'12 )

A:

I ran into the same problem using OS X 10.7.3.  To get more information I ran
brew install -v log4cxx

and saw the error:

...
-I/opt/subversion/include/apr-1 -I/opt/subversion/include -Os -w -pipe -march=native -Qunused-arguments -c objectptr.cpp  -fno-common -DPIC -o .libs/objectptr.o

objectptr.cpp:41:27: error: cast from pointer to smaller type 'apr_uint32_t' (aka 'unsigned int')
      loses information
                          (apr_uint32_t) newValue);
                          ^~~~~~~~~~~~~~~~~~~~~~~
1 error generated.

The problem is it is trying to cast a void* to a apr_uint32_t.  This would work find on a 32-bit machine but I am running on a 64-bit machine so void* is 64 bits.
I read this old post and concluded that the most likely cause is ARP, on my machine, was compiled as a 32-bit app and log4cxx is being built as a 64-bit app.
Looking at the error message above I see it is looking in the wrong place for the ARP includes.  It is finding them in "-I/opt/subversion/include/apr-1" when it should be "-I/usr/include/apr-1".
The solution in my case was to remove the directory /opt/subversion and re-run "brew install -v log4cxx" in a new terminal.

Originally posted by bblodget with karma: 73 on 2012-03-08
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by mjcarroll on 2012-03-09:
Do you know what is generating the /opt/subversion directory?  I don't believe that I have that.
Comment by bblodget on 2012-03-09:
I had an old version of subversion in my opt directory that I installed a long time ago.  Many programs use APR.  I suggest running "brew install -v log4cxx 2>&1 | tee -a log.txt" and then search the log.txt file for "include/apr".  This will show you the path to the APR library it is using.

